# esp-aws-iot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  MigrationGuide.md  README.md
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
examples/: README.md
examples/fleet_provisioning/fleet_provisioning_with_csr/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/fleet_provisioning/fleet_provisioning_with_csr/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  demo_config.h  fleet_provisioning_with_csr_demo.c  mbedtls_pkcs11_posix.c  mbedtls_pkcs11_posix.h  mqtt_operations.c  pkcs11_operations.c
examples/http/http_mutual_auth/: CMakeLists.txt
examples/http/http_mutual_auth/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  demo_config.h  http_demo_mutual_auth.c  http_demo_utils.c
examples/jobs/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/jobs/main/: CMakeLists.txt  JobsDemoExample.c  Kconfig.projbuild  app_main.c  demo_config.h  mqtt_demo_helpers.c  mqtt_demo_helpers.h
examples/mqtt/tls_mutual_auth/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/mqtt/tls_mutual_auth/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_mqtt_defines.h  demo_config.h  idf_component.yml  mqtt_demo_mutual_auth.c
examples/mqtt/tls_mutual_auth/main/certs/: 8938ed8d2f0f34ebf9b031dbeee9b7a95f6e5264f846d511386f80d348cb5ced-public.pem.key  client.crt  client.key  client_1.crt  client_1.key
examples/ota/: SecurityGuide.md
examples/ota/ota_http/: CMakeLists.txt  README.md  partitions_ota_http.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2
examples/ota/ota_http/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  demo_config.h  demo_header.h  http_demo_url_utils.c  http_demo_url_utils.h  http_demo_utils.c  idf_component.yml  ota_config.h  ota_demo_core_http.c
examples/ota/ota_http/main/certs/: client.key
examples/ota/ota_mqtt/: CMakeLists.txt  README.md  ota_mqtt_demo.csv  partitions_ota_mqtt.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2
examples/ota/ota_mqtt/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  demo_config.h  idf_component.yml  ota_config.h  ota_demo_core_mqtt.c
examples/ota/ota_mqtt/main/certs/: aws_codesign.crt
examples/subscribe_publish/main/: subscribe_publish_sample.c
examples/thing_shadow/: CMakeLists.txt  README.md  provis.sh  sdkconfig.defaults
examples/thing_shadow/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  core_utility.h  demo_config.h  shadow_config.h  shadow_demo_helpers.c  shadow_demo_helpers.h  shadow_demo_main.c  thing_shadow_sample.c
examples/thing_shadow/main/certs/: client.crt  client.key
examples/thing_shadow/main/core/extra/: buzzer.c  ldo_control.c  ping_time.c  sensors.c  sleep.c  uart_handler.c
examples/thing_shadow/main/core/include/: buzzer.h  ldo_control.h  main.h  ping_time.h  sensors.h  sleep.h  uart_handler.h
examples/thing_shadow/main/core/include/wifi_driver/: data_store_nvs.h  http_server.h  nvs_platform.h  scan.h  wifi_manager.h
examples/thing_shadow/main/core/libraries/: cJSON.c  nvs_platform.c
examples/thing_shadow/main/core/wifi_driver/: data_store_nvs.c  http_server.c  scan.c  wifi_manager.c
libraries/Device-Defender-for-AWS-IoT-embedded-sdk/: CMakeLists.txt  Kconfig
libraries/Device-Defender-for-AWS-IoT-embedded-sdk/config/: defender_config.h
libraries/Device-Shadow-for-AWS-IoT-embedded-sdk/: CMakeLists.txt  Kconfig
libraries/Device-Shadow-for-AWS-IoT-embedded-sdk/config/: shadow_config.h
libraries/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/: CMakeLists.txt  Kconfig
libraries/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/config/: fleet_provisioning_config.h
libraries/Jobs-for-AWS-IoT-embedded-sdk/: CMakeLists.txt
libraries/backoffAlgorithm/: CMakeLists.txt
libraries/common/logging/: logging_levels.h  logging_stack.h
libraries/common/network_transport/: CMakeLists.txt  tls_freertos.c  tls_freertos.h
libraries/common/posix_compat/: CMakeLists.txt  clock_esp.c  semaphore.h
libraries/coreHTTP/: CMakeLists.txt  Kconfig
libraries/coreHTTP/port/network_transport/: network_transport.c  network_transport.h
libraries/coreJSON/: CMakeLists.txt
libraries/coreMQTT/: CMakeLists.txt  Kconfig
libraries/coreMQTT-Agent/: CMakeLists.txt  Kconfig
libraries/coreMQTT-Agent/config/: core_mqtt_agent_config.h
libraries/coreMQTT-Agent/port/: freertos_agent_message.c  freertos_agent_message.h  freertos_command_pool.c  freertos_command_pool.h
libraries/coreMQTT/config/: core_mqtt_config.h
libraries/coreMQTT/port/network_transport/: network_transport.c  network_transport.h
libraries/corePKCS11/: CMakeLists.txt  Kconfig
libraries/corePKCS11/config/: core_pkcs11_config.h
libraries/corePKCS11/port/: core_pkcs11_pal.c  iot_crypto.c  iot_crypto.h  threading_alt.h
libraries/ota-for-aws-iot-embedded-sdk/: CMakeLists.txt  Kconfig
libraries/ota-for-aws-iot-embedded-sdk/config/: ota_config.h
libraries/ota-for-aws-iot-embedded-sdk/port/: aws_esp_ota_ops.c  aws_esp_ota_ops.h  iot_crypto.c  ota_os_freertos.c  ota_os_freertos.h  ota_pal.c  ota_pal.h
port/: network_mbedtls_wrapper.c  portFilePaths.cmake
port/include/: aws_iot_config.h  network_platform.h
port/logging/: logging_stack.h
port/mqtt_helpers/: mqtt_demo_helpers.c  mqtt_demo_helpers.h  shadow_demo_config.h
port/network_transport/: tls_freertos.c  tls_freertos.h
port/ota/: aws_esp_ota_ops.c  aws_esp_ota_ops.h  ota_os_freertos.c  ota_pal.h
port/pkcs11/: core_pkcs11_pal.c
port/posix-compat/: clock_esp.c  semaphore.c  semaphore.h
