# This gives BACKOFF_ALGORITHM_INCLUDE_PUBLIC_DIRS, and BACKOFF_ALGORITHM_SOURCES
include(${CMAKE_CURRENT_LIST_DIR}/backoffAlgorithm/backoffAlgorithmFilePaths.cmake)

set(BACKOFF_ALGORITHM_INCLUDE_DIRS
    ${BACKOFF_ALGORITHM_INCLUDE_PUBLIC_DIRS}
)

set(BACKOFF_ALGORITHM_SRCS
    ${BACKOFF_ALGORITHM_SOURCES}
)

set(BACKOFF_ALGORITHM_REQUIRES
)

idf_component_register(
    SRCS
        ${BACKOFF_ALGORITHM_SRCS}
    INCLUDE_DIRS
        ${BACKOFF_ALGORITHM_INCLUDE_DIRS}
    REQUIRES
        ${BACKOFF_ALGORITHM_REQUIRES}
)