# This gives MQTT_INCLUDE_PUBLIC_DIRS, MQTT_SOURCES, and MQTT_SERIALIZER_SOURCES
include(${CMAKE_CURRENT_LIST_DIR}/coreMQTT/mqttFilePaths.cmake)

set(COREMQTT_INCLUDE_DIRS
    ${MQTT_INCLUDE_PUBLIC_DIRS}
    ${CMAKE_CURRENT_LIST_DIR}/libraries/coreMQTT/config
)

set(COREMQTT_SRCS
    ${MQTT_SOURCES}
    ${MQTT_SERIALIZER_SOURCES}
)

set(COREMQTT_REQUIRES
)

idf_component_register(
    SRCS
        ${COREMQTT_SRCS}
    INCLUDE_DIRS
        ${COREMQTT_INCLUDE_DIRS}
    REQUIRES
        ${COREMQTT_REQUIRES}
)